--- a/readme.org
+++ b/readme.org
@@ -121,6 +121,12 @@
   (srt-deftest err:3
     (:error 'arith-error
 	    (/ 1 0)))
+
+  (srt-deftest srt-if:2
+    (:eq 'a
+         ('b
+          :srt-if (nil 'c)
+          :srt-if (t 'a))))
   ;; ...
 #+end_src
 ~srt-deftest~ will receive ~test-name~ and ~test-configuration~, 
@@ -130,8 +136,8 @@ Therefore, ~srt-deftest~ same testcase, not running test twice.
 ~test-name~ shouldn't be unique name.
 
 **** Basic test case (Expected ~t~)
-~test-configuration~ accept list of the form ~(:key form expect)~,
-expect to return ~t~ when eval ~(key form expect)~.
+~test-configuration~ accept list of the form ~(:KEY GIVEN EXPECT)~,
+expect to return ~t~ when eval ~(KEY GIVEN EXPECT)~.
 
 By defining like this, any comparison function can use that returns a boolean value
 such as ~eq~, ~equal~, or ~=~.
@@ -139,8 +145,73 @@ such as ~eq~, ~equal~, or ~=~.
 This flexible test notation is one of the important merits of ~srt.el~.
 
 **** Error expected test case
-If you pass a list of the form ~(:error 'error-type form)~ to ~srt-deftest~,
-~'error-type~ accepts symbol such as [[https://www.gnu.org/software/emacs/manual/html_node/elisp/Standard-Errors.html#Standard-Errors][error symbol]] and expects ~'error-type~ error to occur when evaluating ~(form)~.
+If you pass a list of the form ~(:srt-error 'ERROR-TYPE FORM)~ to ~srt-deftest~,
+~'ERROR-TYPE~ accepts symbol such as [[https://www.gnu.org/software/emacs/manual/html_node/elisp/Standard-Errors.html#Standard-Errors][error symbol]] and
+expects ~'ERROR-TYPE~ error to occur when evaluating ~(FORM)~.
+
+**** Flexible test case
+If you want to change the expected form according to the variable
+(or function returns boolean value), use the ~:srt-if~ statement.
+
+#+begin_src emacs-lisp
+  (srt-deftest srt-if:1
+    (:eq 'a
+	 ('b
+	  :srt-if (t 'a))))
+  ;; compare with `eq' 'a and 'a
+  ;; 'a is adopted because first srt-if's VAR is t
+
+  (srt-deftest srt-if:2
+    (:eq 'a
+	 ('b
+	  :srt-if (nil 'c)
+	  :srt-if (t 'a))))
+  ;; compare with `eq' 'a and 'a
+  ;; 'a is adopted because second srt-if's VAR is t
+  ;; first srt-if statement is ignored
+
+  (srt-deftest srt-if:3
+    (:eq 'a
+	 ('a
+	  :srt-if (nil 'c)
+	  :srt-if (nil 'd))))
+  ;; compare with `eq' 'a and 'a
+  ;; any srt-if statement is ignored because any srt-if's VAR is nil.
+  ;; so 'a is adopted, default value.
+
+  (srt-deftest srt-if:4
+    (:eq 'a
+	 ('b
+	  :srt-if (t 'a)
+	  :srt-if (t 'b))))
+  ;; compare with `eq' 'a and 'a
+  ;; 'a is adopted because first srt-if's VAR is t
+  ;; second srt-if statemment is ignored, because first srt-if's VAR is t.
+#+end_src
+
+You can specify many ~:srt-if~ statemant, and you should specify a list like ~(COND FORM)~ for each.
+When the first element of list is ~t~, it is adopted as the form expected by the second element of it.
+
+If all the first elements are nil, the default value is adopted.
+
+(You can use ~:srt-if~ statemant for ~GIVEN~ or both ~GIVEN~ and ~EXPECT~.
+However, such test cases are confusing you in many cases, so you should not use them.)
+
+** Migration
+*** srt v1.0 to v2.0
+**** :error flag has changed to :srt-error
+~:error~ flag has changed to ~:srt-error~ so you fix testcase.
+#+begin_src emacs-lisp
+  ;; srt v1.0 notation
+  (srt-deftest err:1
+    (:error 'void-function
+	    (a 'a)))
+
+  ;; srt v2.0 notation
+  (srt-deftest err:1
+    (:srt-error 'void-function
+		(a 'a)))
+#+end_src
 
 ** Why We support Emacs-22?
 Bundling Emacs-22.1 on macOS 10.13 (High Sierra), we support this.
