--- a/Readme.org
+++ b/Readme.org
@@ -17,6 +17,10 @@
 - You can test your package as close to vanilla's Emacs.
 - Fail or error tests, output simple and intuitive error message.
 
+(~ert.el~ is attached as standard to Emacs,
+operates from Emacs-24 and I think that
+it is difficult to understand the displayed error.)
+
 * How to use?
 1. Put ~srt.el~ your package root folder.
 2. Create ~Makefile~, ~.travis.yml~ if you need.
@@ -339,4 +343,5 @@ Feel free throw PR!
 * Special Thanks
 Advice and comments given by [[http://emacs-jp.github.io/][Emacs-JP]]'s forum member has been a great help
 in developing ~srt.el~.
+
 Thanks you very much!!
