--- a/Readme.org
+++ b/Readme.org
@@ -97,54 +97,56 @@ it is difficult to understand the displayed error.)
     `',x)
 
   ;; define test cases.
-  (cort-deftest simple:equal
-    (:equal '(a b c) '(a b c)))
+  (cort-deftest quote-a
+    '((:eq 'a 'a)
+      (:eq (quote-a) 'a)
+      (:eq 'a (quote-a))
+      (:eq (quote-a) (quote-a))))
 
-  (cort-deftest simple:=
-    (:= 100 100))
+  (cort-deftest sym
+    '((:eq 'a 'a)
+      (:eq (sym a) 'a)
+      (:eq 'a (sym a))
+      (:eq (sym a) (sym a))
+      (:equal (sym (a b c)) '(a b c))
+      (:equal '(a b c) (sym (a b c)))
+      (:equal (sym (a b c)) (sym (a b c)))))
 
-  (cort-deftest quote-a:0
-    (:eq 'a 'a))
+  (cort-deftest err
+    '((:cort-error 'void-function (a 'a))
+      (:cort-error 'error (a 'a))
+      (:cort-error 'arith-error (/ 1 0))
+      (:cort-error 'void-variable (+ 1 a))))
 
-  (cort-deftest quote-a:1
-    (:eq (quote-a) 'a))
+  (cort-deftest cort-if
+    '((:eq 'a ('b
+               :cort-if (t 'a)))
+      (:eq 'a ('b
+               :cort-if (nil 'c)
+               :cort-if (t 'a)))
+      (:eq 'a ('a
+               :cort-if (nil 'c)
+               :cort-if (nil 'd)))
+      (:eq 'a ('b
+               :cort-if (t 'a)
+               :cort-if (t 'b)))))
 
-  (cort-deftest sym:1
-    (:eq (sym a) 'a))
+  (defvar d 'a)
+  (cort-deftest simple:equal1
+    `((:equal ',d 'a)))
 
-  (cort-deftest sym:4
-    (:equal (sym (a b c)) '(a b c)))
-
-  (cort-deftest error-test
-    (:= (+ 1 2) 5))
-
-  (cort-deftest err:1
-    (:cort-error 'void-function
-            (a 'a)))
-
-  (cort-deftest err:3
-    (:cort-error 'arith-error
-            (/ 1 0)))
-
-  (cort-deftest cort-if:2
-    (:eq 'a
-         ('b
-          :cort-if (nil 'c)
-          :cort-if (t 'a))))
-
-  (cort-deftest cort-emacs=:0
-    (:= 10
-        (0
-         :cort-emacs> (0 10))))
-  ;; ...
+  (cort-deftest simple:equal2
+    (let ((e 'b))
+      `((:equal ',e 'b))))
 #+end_src
-~cort-deftest~ will receive ~test-name~ and ~test-configuration~,
+~cort-deftest~ will receive ~test-name~ and ~test-configuration-list~,
 and ~add-to-list~ to ~cort-test-cases~ defined at inside of ~cort-test.el~.
 
-Therefore, ~cort-deftest~ same test case, not running test twice.
-~test-name~ shouldn't be a unique name.
+Therefore, define same test case by ~cort-deftest~, not running test twice.
+Dupulicated ~test-name~ is allowed.
 
-*** Basic test case (Expected ~t~)
+*** Basic test case
+(Expected ~t~)
 ~test-configuration~ accept the list of the form ~(:KEY GIVEN EXPECT)~,
 expect to return ~t~ when eval ~(KEY GIVEN EXPECT)~.
 
@@ -164,35 +166,35 @@ If you want to change the expected form according to the variable
 
 #+begin_src emacs-lisp
   (cort-deftest cort-if:1
-    (:eq 'a
-         ('b
-          :cort-if (t 'a))))
+    '((:eq 'a
+           ('b
+            :cort-if (t 'a)))))
   ;; compare with `eq' 'a and 'a
   ;; 'a is adopted because first cort-if's VAR is t
 
   (cort-deftest cort-if:2
-    (:eq 'a
-         ('b
-          :cort-if (nil 'c)
-          :cort-if (t 'a))))
+    `((:eq 'a
+           ('b
+            :cort-if (nil 'c)
+            :cort-if (t 'a)))))
   ;; compare with `eq' 'a and 'a
   ;; 'a is adopted because second cort-if's VAR is t
   ;; first cort-if statement is ignored
 
   (cort-deftest cort-if:3
-    (:eq 'a
-         ('a
-          :cort-if (nil 'c)
-          :cort-if (nil 'd))))
+    '((:eq 'a
+           ('a
+            :cort-if (nil 'c)
+            :cort-if (nil 'd)))))
   ;; compare with `eq' 'a and 'a
   ;; any cort-if statement is ignored because any cort-if's VAR is nil.
   ;; so 'a is adopted, default value.
 
   (cort-deftest cort-if:4
-    (:eq 'a
-         ('b
-          :cort-if (t 'a)
-          :cort-if (t 'b))))
+    '((:eq 'a
+           ('b
+            :cort-if (t 'a)
+            :cort-if (t 'b)))))
   ;; compare with `eq' 'a and 'a
   ;; 'a is adopted because first cort-if's VAR is t
   ;; second cort-if statemment is ignored, because first cort-if's VAR is t.
@@ -217,29 +219,29 @@ The following symbols are provided.
 
 #+begin_src emacs-lisp
   (cort-deftest cort-emacs:a0
-    (:= 10
-        (0
-         :cort-emacs> (0 10))))
+    '((:= 10
+          (0
+           :cort-emacs> (0 10)))))
 
   (cort-deftest cort-emacs:a1
-    (:= 10
-        (0
-         :cort-if ((not
-                   (funcall (intern "version<") emacs-version "0"))
-                  10))))
+    '((:= 10
+          (0
+           :cort-if ((not
+                      (funcall (intern "version<") emacs-version "0"))
+                     10)))))
 
   ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
   (cort-deftest cort-emacs:b0
-    (:= 10
-        (0
-         :cort-emacs<= (0 10))))
+    '((:= 10
+          (0
+           :cort-emacs<= (0 10)))))
 
   (cort-deftest cort-emacs:b1
-    (:= 10
-        (0
-         :cort-if (((funcall (intern "version<=") emacs-version "0")
-                   10)))))
+    '((:= 10
+          (0
+           :cort-if (((funcall (intern "version<=") emacs-version "0")
+                      10))))))
 #+end_src
 ~cort-emacs:a0~ will be converted to ~cort-emacs:a1~.
 Likewise, ~cort-emacs:b0~ is converted to ~cort-emacs:b1~.
@@ -311,31 +313,38 @@ and you should not run all forms to immediate when you define a test.
 
 Therefore, we usually recommend using macros.)
 * Migration
-** cort v3.0 to cort-test v4.0
-*** ~cort~ has renamed to ~cort-test~
-MELPA ignore ~*-test.el~ and ~*-tests.el~ by default.
-With rename ~cort.el~ to ~cort-test.el~, MELPA can ignore this test framework by default.
+** v4.0 to v5.0
+- A now expects a list of forms as the second argument.
 
-However, since this prefix has not changed, this effect is minimal.
+  With this change, short and easy to understand
+  test definition is now possible.
+
+** cort v3.0 to cort-test v4.0
+- ~cort~ has renamed to ~cort-test~
+  MELPA ignore ~*-test.el~ and ~*-tests.el~ by default.
+  With rename ~cort.el~ to ~cort-test.el~, MELPA can ignore this test framework by default.
+
+  However, since this prefix has not changed, this effect is minimal.
 
 ** srt v2.0 to cort v3.0
-*** ~srt~ has renamed to ~cort~
-All ~srt~ suffix flag is renamed to ~cort~ suffix.
+- ~srt~ has renamed to ~cort~
+  All ~srt~ suffix flag is renamed to ~cort~ suffix.
 
 ** srt v1.0 to v2.0
-*** :error flag has changed to :srt-error
-~:error~ flag has changed to ~:srt-error~ so please fix testcase.
-#+begin_src emacs-lisp
-  ;; srt v1.0 notation
-  (srt-deftest err:1
-    (:error 'void-function
-            (a 'a)))
+- :error flag has changed to :srt-error
 
-  ;; srt v2.0 notation
-  (srt-deftest err:1
-    (:srt-error 'void-function
-                (a 'a)))
-#+end_src
+  ~:error~ flag has changed to ~:srt-error~ so please fix testcase.
+  #+begin_src emacs-lisp
+    ;; srt v1.0 notation
+    (srt-deftest err:1
+      (:error 'void-function
+              (a 'a)))
+  
+    ;; srt v2.0 notation
+    (srt-deftest err:1
+      (:srt-error 'void-function
+                  (a 'a)))
+  #+end_src
 
 * Why We support Emacs-22?
 Bundling Emacs-22.1 on macOS 10.13 (High Sierra), we support this.
